Estilizando botão Onde Assistir e criando assistir.html

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="">Onde assistir</a></li>
+                <li><a class="button-assistir" href="./assistir.html">Onde assistir</a></li>
                 <li><button onclick="toggleDropdown()" class="dropbtn">Temporadas</button></li>
                 <div id="myDropdown" class="dropdown-content">
                     <a href="">Temporada 1</a>
