--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Em 1919, um infame gangue de Birmingham é liderado pelo cruel Tommy Shelby, um patrão do crime determinado a conquistar o mundo a qualquer preço">
     <title>Peaky Blinders</title>
     <link rel="stylesheet" href="style.css" >
+    <link rel="shortcut icon" href="imagens/balas.png" type="image/x-icon">
 </head>
 <body>
     <header>
