--- a/home.html
+++ b/home.html
@@ -9,15 +9,21 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="menu">
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a class="button-assistir" href="./assistir.html">Onde assistir</a></li>
-                <li><button onclick="toggleDropdown()" class="dropbtn">Temporadas</button></li>
-                <div id="myDropdown" class="dropdown-content">
-                    <a href="">Temporada 1</a>
-                    <a href="">Temporada 2</a>
-                    <a href="">Temporada 3</a>
+                <li><a href="#">Temporadas</a>
+                    <ul>
+                        <li><a href="#">Temporada 1</a></li>
+                        <li><a href="#">Temporada 2</a></li>
+                        <li><a href="#">Temporada 3</a></li>
+                        <li><a href="#">Temporada 4</a></li>
+                        <li><a href="#">Temporada 5</a></li>
+                        <li><a href="#">Temporada 6</a></li>
+
+                    </ul>
+                </li>
             </ul>
         </nav>
     </header>
