--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a class="button-assistir" href="./assistir.html">Onde assistir</a></li>
                 <li><a href="#">Temporadas</a>
                     <ul>
-                        <li><a href="#">Temporada 1</a></li>
+                        <li><a href="./temporada1.html">Temporada 1</a></li>
                         <li><a href="#">Temporada 2</a></li>
                         <li><a href="#">Temporada 3</a></li>
                         <li><a href="#">Temporada 4</a></li>
