--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <li><a href="#">Temporadas</a>
                     <ul>
                         <li><a href="./temporada1.html">Temporada 1</a></li>
-                        <li><a href="#">Temporada 2</a></li>
-                        <li><a href="#">Temporada 3</a></li>
-                        <li><a href="#">Temporada 4</a></li>
-                        <li><a href="#">Temporada 5</a></li>
-                        <li><a href="#">Temporada 6</a></li>
+                        <li><a href="./temporada2.html">Temporada 2</a></li>
+                        <li><a href="./temporada3.html">Temporada 3</a></li>
+                        <li><a href="./temporada4.html">Temporada 4</a></li>
+                        <li><a href="./temporada5.html">Temporada 5</a></li>
+                        <li><a href="./temporada6.html">Temporada 6</a></li>
 
                     </ul>
                 </li>
