--- a/temporada2.html
+++ b/temporada2.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
     <meta name="keywords" content="serie, peaky blinders, coderhouse,temporada1">
     <meta name="description" content="Em 1919, um infame gangue de Birmingham é liderado pelo cruel Tommy Shelby, um patrão do crime determinado a conquistar o mundo a qualquer preço">
-    <title>Peaky Blinders - Temporada 1</title>
+    <title>Peaky Blinders - Temporada 2</title>
     <link rel="stylesheet" href="style.css" >
     <link rel="stylesheet" href="style_temporadas.css">
     <link rel="shortcut icon" href="imagens/balas.png" type="image/x-icon">
@@ -32,35 +32,34 @@
             </ul>
         </nav>
     </header>
-    
-
-    <main class="main_tum">
-        <h1>Temporada 1</h1>
+   
+    <main class="main_tdois">
+        <h1>Temporada 2</h1>
         <br><br>
 
-        <div id="temporada_um">
-            <h2>T1:E1 "Episódio 1"</h2>
-            <p> O ambicioso gângster Thomas Shelby percebe que um carregamento de armas desaparecido pode ser sua grande chance de subir na vida. </p>
+        <div id="temporada_dois">
+            <h2>T2:E1 "Episódio 1"</h2>
+            <p>O pub preferido de Tommy Shelby, chefe do crime de Birmingham, é destruído por uma explosão e ele é chantageado para assassinar um dissidente irlandês.</p>
             <br><br>
 
-            <h2>T1:E2 "Episódio 2"</h2>
-            <p>Thomas provoca um criminoso local ao trapacear em uma corrida de cavalos e entra em pé de guerra com uma família de ciganos. Campbell organiza um ataque surpresa.</p>
+            <h2>T2:E2 "Episódio 2"</h2>
+            <p>Após assassinar um dissidente irlandês, Tommy fica sem saída e é obrigado a fazer parte do perigoso jogo político do Inspetor Campbell.</p>
             <br><br>
 
-            <h2>T1:E3 "Episódio 3"</h2>
-            <p>Thomas pretende se aproximar de Billy Kimber nas corridas de Cheltenham e considera uma oferta de simpatizantes do IRA para comprar suas armas.</p>
+            <h2>T2:E3 "Episódio 3"</h2>
+            <p>Após se unir ao chefe do crime londrino Alfie Solomons em uma nova empreitada, Tommy teme que a volatilidade recém-revelada de Alfie cause algum problema.</p>
             <br><br>
 
-            <h2>T1:E4 "Episódio 4"</h2>
-            <p>Thomas está cada vez mais desconfiado da noiva de seu irmão, e Campbell pressiona a gangue a entregar as armas.</p>
+            <h2>T2:E4 "Episódio 4"</h2>
+            <p>Os Peaky Blinders assumem o controle do Eden Club em Londres. Sabini convence seu velho inimigo Alfie Solomons a juntarem forças e acabar com a gangue.</p>
             <br><br>
 
-            <h2>T1:E5 "Episódio 5"</h2>
-            <p>Thomas lida com um líder do IRA querendo se vingar da morte de seu primo, e Grace precisa decidir se é leal a Campbell ou Thomas.</p>
+            <h2>T2:E5 "Episódio 5"</h2>
+            <p>Os Peaky Blinders estão sendo atacados. A base de Tommy em Londres é destruída e Arthur e Michael são detidos e encarcerados.</p>
             <br><br>
 
-            <h2>T1:E6 "Episódio 6"</h2>
-            <p>Thomas se prepara para tirar Billy Kimber do poder, mas segredos de família e a obsessão de Campbell podem atrapalhar seus planos.</p>
+            <h2>T2:E6 "Episódio 6"</h2>
+            <p>Tommy planeja executar a missão que recebeu de Campbell: assassinar um militar de alto escalão.</p>
             <br><br>
         </div>
     </main>
