--- a/temporada3.html
+++ b/temporada3.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
     <meta name="keywords" content="serie, peaky blinders, coderhouse,temporada1">
     <meta name="description" content="Em 1919, um infame gangue de Birmingham é liderado pelo cruel Tommy Shelby, um patrão do crime determinado a conquistar o mundo a qualquer preço">
-    <title>Peaky Blinders - Temporada 1</title>
+    <title>Peaky Blinders - Temporada 3</title>
     <link rel="stylesheet" href="style.css" >
     <link rel="stylesheet" href="style_temporadas.css">
     <link rel="shortcut icon" href="imagens/balas.png" type="image/x-icon">
@@ -32,35 +32,34 @@
             </ul>
         </nav>
     </header>
-    
-
-    <main class="main_tum">
-        <h1>Temporada 1</h1>
+   
+    <main class="main_ttres">
+        <h1>Temporada 3</h1>
         <br><br>
 
-        <div id="temporada_um">
-            <h2>T1:E1 "Episódio 1"</h2>
-            <p> O ambicioso gângster Thomas Shelby percebe que um carregamento de armas desaparecido pode ser sua grande chance de subir na vida. </p>
+        <div id="temporada_tres">
+            <h2>T3:E1 "Episódio 1"</h2>
+            <p>No dia do casamento de Tommy, um novo parceiro de negócios combina uma transação secreta. Arthur encontra uma mulher religiosa e Polly conhece um homem atraente.</p>
             <br><br>
 
-            <h2>T1:E2 "Episódio 2"</h2>
-            <p>Thomas provoca um criminoso local ao trapacear em uma corrida de cavalos e entra em pé de guerra com uma família de ciganos. Campbell organiza um ataque surpresa.</p>
+            <h2>T3:E2 "Episódio 2"</h2>
+            <p>Uma ameaça impensada é o estopim de uma guerra. Tommy recebe um pagamento incomum, mas os chefões fazem o que for preciso para mantê-lo na linha. Polly encomenda um retrato.</p>
             <br><br>
 
-            <h2>T1:E3 "Episódio 3"</h2>
-            <p>Thomas pretende se aproximar de Billy Kimber nas corridas de Cheltenham e considera uma oferta de simpatizantes do IRA para comprar suas armas.</p>
+            <h2>T3:E3 "Episódio 3"</h2>
+            <p>Tommy viaja até o País de Gales em busca de absolvição e descobre um traidor na Liga Econômica. Michael começa a tomar gosto por armas. Arthur recebe boas notícias.</p>
             <br><br>
 
-            <h2>T1:E4 "Episódio 4"</h2>
-            <p>Thomas está cada vez mais desconfiado da noiva de seu irmão, e Campbell pressiona a gangue a entregar as armas.</p>
+            <h2>T3:E4 "Episódio 4"</h2>
+            <p>Polly vai se confessar, dando início a uma série de eventos que revelam um plano para que os Shelby caiam em uma armadilha. Tommy planeja sair dos negócios sujos.</p>
             <br><br>
 
-            <h2>T1:E5 "Episódio 5"</h2>
-            <p>Thomas lida com um líder do IRA querendo se vingar da morte de seu primo, e Grace precisa decidir se é leal a Campbell ou Thomas.</p>
+            <h2>T3:E5 "Episódio 5"</h2>
+            <p>Ao perceber que os russos foram mais astutos do que ele, Tommy procura a ajuda de um antigo parceiro de negócios. A nova amizade de Polly se transforma em algo a mais.</p>
             <br><br>
 
-            <h2>T1:E6 "Episódio 6"</h2>
-            <p>Thomas se prepara para tirar Billy Kimber do poder, mas segredos de família e a obsessão de Campbell podem atrapalhar seus planos.</p>
+            <h2>T3:E6 "Episódio 6"</h2>
+            <p>Enquanto Tommy se prepara para cometer o crime mais audacioso de sua carreira, um golpe inesperado o força a enfrentar seus maiores medos em uma corrida contra o tempo.</p>
             <br><br>
         </div>
     </main>
