--- a/temporada4.html
+++ b/temporada4.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
     <meta name="keywords" content="serie, peaky blinders, coderhouse,temporada1">
     <meta name="description" content="Em 1919, um infame gangue de Birmingham é liderado pelo cruel Tommy Shelby, um patrão do crime determinado a conquistar o mundo a qualquer preço">
-    <title>Peaky Blinders - Temporada 1</title>
+    <title>Peaky Blinders - Temporada 4</title>
     <link rel="stylesheet" href="style.css" >
     <link rel="stylesheet" href="style_temporadas.css">
     <link rel="shortcut icon" href="imagens/balas.png" type="image/x-icon">
@@ -32,35 +32,36 @@
             </ul>
         </nav>
     </header>
-    
+   
+    <main class="main_tquatro">
+        
 
-    <main class="main_tum">
-        <h1>Temporada 1</h1>
-        <br><br>
-
-        <div id="temporada_um">
-            <h2>T1:E1 "Episódio 1"</h2>
-            <p> O ambicioso gângster Thomas Shelby percebe que um carregamento de armas desaparecido pode ser sua grande chance de subir na vida. </p>
+        <div id="temporada_quatro">
+            <h1>Temporada 4</h1>
             <br><br>
 
-            <h2>T1:E2 "Episódio 2"</h2>
-            <p>Thomas provoca um criminoso local ao trapacear em uma corrida de cavalos e entra em pé de guerra com uma família de ciganos. Campbell organiza um ataque surpresa.</p>
+            <h2>T4:E1 "A forca"</h2>
+            <p>No Natal de 1925, os integrantes da família Shelby descobrem que a máfia de Nova York está a caminho para vingar os assassinatos que eles cometeram no passado.</p>
             <br><br>
 
-            <h2>T1:E3 "Episódio 3"</h2>
-            <p>Thomas pretende se aproximar de Billy Kimber nas corridas de Cheltenham e considera uma oferta de simpatizantes do IRA para comprar suas armas.</p>
+            <h2>T4:E2 "Bárbaros"</h2>
+            <p>Tentando se recuperar das perdas, os Shelby se reúnem em Small Heath, onde Tommy propõe uma trégua para organizar a ofensiva contra a máfia.</p>
             <br><br>
 
-            <h2>T1:E4 "Episódio 4"</h2>
-            <p>Thomas está cada vez mais desconfiado da noiva de seu irmão, e Campbell pressiona a gangue a entregar as armas.</p>
+            <h2>T4:E3 "Questão de segurança nacional"</h2>
+            <p>Linda tenta distrair Arthur. Mais tarde, ele acaba caindo em uma emboscada. Tommy se lembra de quem era antes da guerra. Polly encontra um homem de seu passado.</p>
             <br><br>
 
-            <h2>T1:E5 "Episódio 5"</h2>
-            <p>Thomas lida com um líder do IRA querendo se vingar da morte de seu primo, e Grace precisa decidir se é leal a Campbell ou Thomas.</p>
+            <h2>T4:E4 "Perigo à vista"</h2>
+            <p>A máfia tenta atrair um dos Shelby para uma armadilha. Tommy recebe a visita de uma antiga paixão. Lizzie recebe notícias inesperadas.</p>
             <br><br>
 
-            <h2>T1:E6 "Episódio 6"</h2>
-            <p>Thomas se prepara para tirar Billy Kimber do poder, mas segredos de família e a obsessão de Campbell podem atrapalhar seus planos.</p>
+            <h2>T4:E5 "À revolução!"</h2>
+            <p>Mesmo em menor número, Tommy inicia um tiroteio com a máfia. Luca Changretta aborda Alfie Solomons. Militares britânicos procuram por Ada.</p>
+            <br><br>
+
+            <h2>T4:E6 "À paz!"</h2>
+            <p>Arthur segue seu instinto durante a luta de boxe. Tommy é inspirado pelas sábias palavras de Alfie Solomons e recebe informações importantes de Jessie.</p>
             <br><br>
         </div>
     </main>
