--- a/temporada5.html
+++ b/temporada5.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
     <meta name="keywords" content="serie, peaky blinders, coderhouse,temporada1">
     <meta name="description" content="Em 1919, um infame gangue de Birmingham é liderado pelo cruel Tommy Shelby, um patrão do crime determinado a conquistar o mundo a qualquer preço">
-    <title>Peaky Blinders - Temporada 1</title>
+    <title>Peaky Blinders - Temporada 5</title>
     <link rel="stylesheet" href="style.css" >
     <link rel="stylesheet" href="style_temporadas.css">
     <link rel="shortcut icon" href="imagens/balas.png" type="image/x-icon">
@@ -32,35 +32,36 @@
             </ul>
         </nav>
     </header>
-    
+   
+    <main class="main_tcinco">
+        
 
-    <main class="main_tum">
-        <h1>Temporada 1</h1>
-        <br><br>
-
-        <div id="temporada_um">
-            <h2>T1:E1 "Episódio 1"</h2>
-            <p> O ambicioso gângster Thomas Shelby percebe que um carregamento de armas desaparecido pode ser sua grande chance de subir na vida. </p>
+        <div id="temporada_cinco">
+            <h1>Temporada 5</h1>
             <br><br>
 
-            <h2>T1:E2 "Episódio 2"</h2>
-            <p>Thomas provoca um criminoso local ao trapacear em uma corrida de cavalos e entra em pé de guerra com uma família de ciganos. Campbell organiza um ataque surpresa.</p>
+            <h2>T5:E1 "Catástrofe na terça-feira"</h2>
+            <p>A família Shelby se reúne às pressas para tratar de notícias graves. Ada esconde um segredo. Tommy é visitado por um jornalista que conhece o seu passado.</p>
             <br><br>
 
-            <h2>T1:E3 "Episódio 3"</h2>
-            <p>Thomas pretende se aproximar de Billy Kimber nas corridas de Cheltenham e considera uma oferta de simpatizantes do IRA para comprar suas armas.</p>
+            <h2>T5:E2 "Gatos pretos"</h2>
+            <p>As mensagens anônimas tomam um rumo alarmante. A lealdade de Michael é questionada. Oswald Mosley faz um convite a Tommy.</p>
             <br><br>
 
-            <h2>T1:E4 "Episódio 4"</h2>
-            <p>Thomas está cada vez mais desconfiado da noiva de seu irmão, e Campbell pressiona a gangue a entregar as armas.</p>
+            <h2>T5:E3 "Estratégia"</h2>
+            <p>Aberama vai a Glasgow atrás de vingança. Mosley chantageia Tommy, que decide dar o troco. Desesperado para achar Linda, Arthur perde o controle.</p>
             <br><br>
 
-            <h2>T1:E5 "Episódio 5"</h2>
-            <p>Thomas lida com um líder do IRA querendo se vingar da morte de seu primo, e Grace precisa decidir se é leal a Campbell ou Thomas.</p>
+            <h2>T5:E4 "O ciclo"</h2>
+            <p>Tommy e Jimmy McCavern acertam uma trégua. Surge uma oportunidade de negócios lucrativa. Em nome do amor, Aberama pode adiar sua vingança.</p>
             <br><br>
 
-            <h2>T1:E6 "Episódio 6"</h2>
-            <p>Thomas se prepara para tirar Billy Kimber do poder, mas segredos de família e a obsessão de Campbell podem atrapalhar seus planos.</p>
+            <h2>T5:E5 "A surpresa"</h2>
+            <p>Mosley discursa na festa. Ben Younger sofre consequências inesperadas por contar o que Tommy descobriu sobre os fascistas. Tommy visita um ex-companheiro de guerra.</p>
+            <br><br>
+
+            <h2>T5:E6 "Sr. Jones"</h2>
+            <p>Numa reunião de família, Michael faz uma proposta ousada. O espião é identificado. Tommy pede para um antigo rival ajudá-lo a derrubar Mosley.</p>
             <br><br>
         </div>
     </main>
