--- a/temporada6.html
+++ b/temporada6.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
     <meta name="keywords" content="serie, peaky blinders, coderhouse,temporada1">
     <meta name="description" content="Em 1919, um infame gangue de Birmingham é liderado pelo cruel Tommy Shelby, um patrão do crime determinado a conquistar o mundo a qualquer preço">
-    <title>Peaky Blinders - Temporada 1</title>
+    <title>Peaky Blinders - Temporada 6</title>
     <link rel="stylesheet" href="style.css" >
     <link rel="stylesheet" href="style_temporadas.css">
     <link rel="shortcut icon" href="imagens/balas.png" type="image/x-icon">
@@ -32,35 +32,36 @@
             </ul>
         </nav>
     </header>
-    
+   
+    <main class="main_tseis">
+        
 
-    <main class="main_tum">
-        <h1>Temporada 1</h1>
-        <br><br>
-
-        <div id="temporada_um">
-            <h2>T1:E1 "Episódio 1"</h2>
-            <p> O ambicioso gângster Thomas Shelby percebe que um carregamento de armas desaparecido pode ser sua grande chance de subir na vida. </p>
+        <div id="temporada_seis">
+            <h1>Temporada 5</h1>
             <br><br>
 
-            <h2>T1:E2 "Episódio 2"</h2>
-            <p>Thomas provoca um criminoso local ao trapacear em uma corrida de cavalos e entra em pé de guerra com uma família de ciganos. Campbell organiza um ataque surpresa.</p>
+            <h2>T6:E1 "Dia sombrio"</h2>
+            <p>A tentativa de assassinato de Mosley acaba em tragédia para a família Shelby. Quatro anos depois, o iminente fim da Lei Seca leva Tommy à América do Norte.</p>
             <br><br>
 
-            <h2>T1:E3 "Episódio 3"</h2>
-            <p>Thomas pretende se aproximar de Billy Kimber nas corridas de Cheltenham e considera uma oferta de simpatizantes do IRA para comprar suas armas.</p>
+            <h2>T6:E2 "Camisa preta"</h2>
+            <p>Tommy faz uma aliança inesperada para facilitar sua proposta a Jack Nelson. Ruby, sua filha, faz uma revelação preocupante.</p>
             <br><br>
 
-            <h2>T1:E4 "Episódio 4"</h2>
-            <p>Thomas está cada vez mais desconfiado da noiva de seu irmão, e Campbell pressiona a gangue a entregar as armas.</p>
+            <h2>T6:E3 "Ouro"</h2>
+            <p>Tommy vai ao encontro de Esme. No lugar dele, Ada apresenta Jack Nelson a Mosley e Diana. Arthur conhece um ex-dependente químico que entende sua dificuldade.</p>
             <br><br>
 
-            <h2>T1:E5 "Episódio 5"</h2>
-            <p>Thomas lida com um líder do IRA querendo se vingar da morte de seu primo, e Grace precisa decidir se é leal a Campbell ou Thomas.</p>
+            <h2>T6:E4 "Safira"</h2>
+            <p>Arrasado por outra perda, Tommy busca vingança. Ada sofre com o fascismo. O sanatório envia uma mensagem urgente.</p>
             <br><br>
 
-            <h2>T1:E6 "Episódio 6"</h2>
-            <p>Thomas se prepara para tirar Billy Kimber do poder, mas segredos de família e a obsessão de Campbell podem atrapalhar seus planos.</p>
+            <h2>T6:E5 "Caminho para o inferno"</h2>
+            <p>Tommy faz um acordo com Linda. O informante infiltrado na família Shelby tem uma nova missão. Diana concorda em fazer um favor a Tommy, mas sob uma condição.</p>
+            <br><br>
+
+            <h2>T6:E6 "Trancado à chave"</h2>
+            <p>O informante sabe quando e onde Arthur estará sozinho. Michael, que acaba de sair da cadeia, encara sua missão. A lealdade de Finn à família é testada.</p>
             <br><br>
         </div>
     </main>
