adicionando informação em assistir.html

--- a/assistir.html
+++ b/assistir.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    
-    
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
+    <meta name="keywords" content="serie, peaky blinders, coderhouse">
+    <meta name="description" content="Em 1919, um infame gangue de Birmingham é liderado pelo cruel Tommy Shelby, um patrão do crime determinado a conquistar o mundo a qualquer preço">
+    <title>Peaky Blinders - Onde assistir</title>
+    <link rel="stylesheet" href="style.css" >
+    <link rel="shortcut icon" href="imagens/balas.png" type="image/x-icon">
 </head>
 <body>
-    <h1>Temporada 1</h1>
-</body>
-</html>
+    <header>
+        <nav class="menu">
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a class="button-assistir" href="./assistir.html">Onde assistir</a></li>
+                <li><a href="#">Temporadas</a>
+                    <ul>
+                        <li><a href="./temporada1.html">Temporada 1</a></li>
+                        <li><a href="./temporada2.html">Temporada 2</a></li>
+                        <li><a href="./temporada3.html">Temporada 3</a></li>
+                        <li><a href="./temporada4.html">Temporada 4</a></li>
+                        <li><a href="./temporada5.html">Temporada 5</a></li>
+                        <li><a href="./temporada6.html">Temporada 6</a></li>
+
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div class="onde_assistir">
+            <h1>Onde Assistir</h1>
+            <p>A série britânica Peaky Blinders está atualmente disponível no catálogo da Netflix. Lançada em 2013, pelo canal BBC Two, o projeto exibiu sua última temporada em abril de 2022 no streaming. Com o roteirista indicado ao Oscar Steven Knight como showrunner e Cillian Murphy e Helen McCrory no elenco, a trama acompanha as façanhas e perigos enfrentados pela gangue criminosa Peaky Blinders logo após a Primeira Guerra Mundial.
+                Com seis temporadas, a produção inglesa foi um grande sucesso da televisão e, em 2023, ela completou 10 anos. Confira, a seguir, todas as informações sobre Peaky Blinders, como sinopse, elenco, repercussão e a história real por trás da série. Confira!</p>
+
+        </div>
+    </main>
