--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                 <li><a href="#">Home</a></li>
                 <li><a class="button-assistir" href="./assistir.html">Onde assistir</a></li>
                 <li><a href="#">Temporadas</a>
+
+                
                     <ul>
                         <li><a href="./temporada1.html">Temporada 1</a></li>
                         <li><a href="./temporada2.html">Temporada 2</a></li>
@@ -27,9 +29,14 @@
 
                     </ul>
                 </li>
+                <h2 class="logo">Peaky Blinders</h2>
             </ul>
+
+            
         </nav>
     </header>
+
+    <img src="./imagens/peaky_blinders_header.jpg" alt="imagem">
 
     <main>
         <div id="sobre">
