Adicionando imagem no body

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         </nav>
     </header>
 
+    <!-- <section class="sectionAbsolute">
+        <div class="sectionAbsolute__div1"></div>
+        <div class="sectionAbsolute__div2"></div>
+        <div class="sectionAbsolute__div3"></div>
+    </section> -->
+    
+
     <img src="./imagens/peaky_blinders_header.jpg" alt="imagem">
 
     <main>
