Trocando onde assistir por elenco, adicionando cor, fonte, e imagens

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a class="button-assistir" href="./assistir.html">Onde assistir</a></li>
+                <li><a class="button-elenco" href="./elenco.html">Elenco</a></li>
                 <li><a href="#">Temporadas</a>
                     <ul>
                         <li><a href="./temporada1.html">Temporada 1</a></li>
@@ -27,21 +27,23 @@
 
                     </ul>
                 </li>
-                <h2 class="logo">Peaky Blinders</h2>
+                <h2 class="logo"> <a href="./index.html">Peaky Blinders</a></h2>
             </ul>
 
             
         </nav>
     </header>
 
-    <!-- <section class="sectionAbsolute">
+    <section class="sectionAbsolute">
         <div class="sectionAbsolute__div1"></div>
         <div class="sectionAbsolute__div2"></div>
         <div class="sectionAbsolute__div3"></div>
-    </section> -->
+    </section>
     
 
-    <img src="./imagens/peaky_blinders_header.jpg" alt="imagem">
+    <!-- <img class="imagem1" src="./imagens/thomas.jpg" alt="imagem">
+    <img class="imagem2" src="./imagens/arthur2.jpg" alt="imagem">
+    <img class="imagem3" src="./imagens/jhon.jpg" alt="imagem"> -->
 
     <main>
         <div id="sobre">
