--- a/temporada5.html
+++ b/temporada5.html
@@ -17,7 +17,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a class="button-assistir" href="./assistir.html">Onde assistir</a></li>
+                <li><a class="button-elenco" href="./elenco.html">Elenco</a></li>
                 <li><a href="#">Temporadas</a>
                     <ul>
                         <li><a href="./temporada1.html">Temporada 1</a></li>
