Adicionando linha horizontal

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     <main>
         <div id="sobre">
             <h2 class="sobre_titulo">Sobre</h2>
+            <br><br>
+            <div class="linha-horizontal"></div>
+            <br><br>
             <p>Em Peaky Blinders, Thomas Shelby (Cillian Murphy) e seus irmãos retornam a Birmingham depois de servir
                 no exército britânico durante a Primeira Guerra Mundial. Shelby e os Peaky Blinders, a gangue de 
                 criminosos da qual ele é líder, controlam a cidade com mãos de ferro, construindo um império que vai 
