--- a/index.html
+++ b/index.html
@@ -82,5 +82,8 @@
             allowfullscreen></iframe>
         </div>
     </main>
+
+
+    <footer>Todos os direitos reservados</footer>
 </body>
 </html>
