adicionando imagem logo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                     </ul>
                 </li>
-                <h2 class="logo"> <a href="./index.html">Peaky Blinders</a></h2>
+                <img class="logo" src="./imagens/peaky_Blinders_logo.jpg" alt="imagem logo">
             </ul>
 
             
