Formatando texto body

--- a/index.html
+++ b/index.html
@@ -55,18 +55,25 @@
                 no exército britânico durante a Primeira Guerra Mundial. Shelby e os Peaky Blinders, a gangue de 
                 criminosos da qual ele é líder, controlam a cidade com mãos de ferro, construindo um império que vai 
                 desde corridas de cavalo adulteradas e roubo de carregamentos até parcerias secretas com os russos. 
-                Mas as ambições de Shelby se estendem para além de Birmingham, e ele não vai deixar que ninguém 
+            </p>
+            <br>
+               <p> Mas as ambições de Shelby se estendem para além de Birmingham, e ele não vai deixar que ninguém 
                 atrapalhe seus planos de se tornar um dos homens mais poderosos do Reino Unido. À medida que sua 
                 família se destaca nos negócios, novas alianças se formam, bem como novas e perigosas rivalidades. 
-                Ao mesmo tempo que vive as transformações políticas, econômicas e sociais do início do século 20, 
-                Shelby precisa lidar com os traumas de seu próprio passado - que parecem atormentá-lo diariamente.</p>
-
+            </p>
+            <br>
+                <p>Ao mesmo tempo que vive as transformações políticas, econômicas e sociais do início do século 20, 
+                Shelby precisa lidar com os traumas de seu próprio passado - que parecem atormentá-lo diariamente.
+            </p>
+            <br>
             <p>O título e a história da série são baseados nos de uma gangue real, que existiu na Inglaterra, chamada Peaky Blinders, e cuja a atividade se perdurou de 1890 a 1910 na cidade de Birmingham. A narrativa da série, no entanto, está situada a partir dos anos 1919 e é estrelada por Cillian Murphy no papel de Thomas Shelby.
                 Thomas é o líder da gangue e detém o principal objetivo de subir na vida a qualquer preço, mesmo que para isso ele precise exercer total controle sobre as outras pessoas e pisotear os direitos do próximo. A família Shelby, então, passa a dominar diferentes atividades ilegais da cidade, como a venda de armas de fogo, esquema de corrida de cavalos, e até golpes.</p>
-            
+            <br>
             
             <p>Os interesses criminosos desta família ainda batem de frente com a lei quando o inspetor Chester Campebell é enviado à Birmingham para averiguar o desvio de armas de fogo, que eram destinadas ao exército inglês e foram adquiridas ilegalmente pela gangue.</p>
+            <br>
             <p>A narrativa da série explora as dificuldades na cidade grande após o fim da Primeira Guerra Mundial, o crescimento e popularização de comércios ilegais, as desigualdades sociais, e as guerras urbanas travadas pelas gangues e policiais.</p>
+            <br>
             <p>O elenco ainda conta com nomes como Sam Neil, Helen McCrory, Paul Anderson, e Tom Hardy. A série foi lançada originalmente em 2013 pela emissora BCC, mas passou a integrar uma parceria com a Netflix. Desta forma, é possível encontrá-la diretamente na plataforma de streaming da Netflix. A história totalizou seis temporadas até o seu episódio final em 2022. Confira o teaser da primeira temporada abaixo:</p>
         </div>
 
