Adicionando logo em todas as abas

--- a/elenco.html
+++ b/elenco.html
@@ -28,7 +28,9 @@
                         <li><a href="./temporada6.html">Temporada 6</a></li>
 
                     </ul>
+                    
                 </li>
+                <img class="logo" src="./imagens/peaky_Blinders_logo.jpg" alt="imagem logo">
             </ul>
         </nav>
     </header>
