--- a/temporada4.html
+++ b/temporada4.html
@@ -29,6 +29,7 @@
 
                     </ul>
                 </li>
+                <img class="logo" src="./imagens/peaky_Blinders_logo.jpg" alt="imagem logo">
             </ul>
         </nav>
     </header>
