--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                     </ul>
                 </li>
-                <img class="logo" src="./imagens/peaky_Blinders_logo.jpg" alt="imagem logo">
+                <a href="./index.html"><img class="logo" src="./imagens/peaky_Blinders_logo.jpg" alt="imagem logo"></a>
             </ul>
 
             
