--- a/temporada6.html
+++ b/temporada6.html
@@ -29,7 +29,8 @@
 
                     </ul>
                 </li>
-                <img class="logo" src="./imagens/peaky_Blinders_logo.jpg" alt="imagem logo">
+                <a href="./index.html"><img class="logo" src="./imagens/peaky_Blinders_logo.jpg" alt="imagem logo"></a>
+
             </ul>
         </nav>
     </header>
