--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 </head>
 <body>
     <header>
-        <nav class="menu">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a class="button-elenco" href="./elenco.html">Elenco</a></li>
-                <li><a href="#">Temporadas</a>
-                    <ul>
-                        <li><a href="./temporada1.html">Temporada 1</a></li>
-                        <li><a href="./temporada2.html">Temporada 2</a></li>
-                        <li><a href="./temporada3.html">Temporada 3</a></li>
-                        <li><a href="./temporada4.html">Temporada 4</a></li>
-                        <li><a href="./temporada5.html">Temporada 5</a></li>
-                        <li><a href="./temporada6.html">Temporada 6</a></li>
+        <nav>
+            <ul class="menu">
+                <li class="menu__item"><a href="#">Home</a></li>
+                <li class="menu__item"><a class="button-elenco" href="./elenco.html">Elenco</a></li>
+                <li class="menu__item com-submenu"><a href="">Temporadas</a>
+                    <ul class="submenu">
+                        <li class="submenu__item"><a href="./temporada1.html">Temporada 1</a></li>
+                        <li class="submenu__item"><a href="./temporada2.html">Temporada 2</a></li>
+                        <li class="submenu__item"><a href="./temporada3.html">Temporada 3</a></li>
+                        <li class="submenu__item"><a href="./temporada4.html">Temporada 4</a></li>
+                        <li class="submenu__item"><a href="./temporada5.html">Temporada 5</a></li>
+                        <li class="submenu__item"><a href="./temporada6.html">Temporada 6</a></li>
 
                     </ul>
                 </li>
@@ -33,6 +33,7 @@
             
         </nav>
     </header>
+    <h2 class="frase">BY ORDER OF THE PEAKY FUCKING BLINDERS</h2>
 
     <section class="sectionAbsolute">
         <div class="sectionAbsolute__div1"></div>
