Ajustando a home e header

--- a/elenco.html
+++ b/elenco.html
@@ -14,18 +14,18 @@
 </head>
 <body>
     <header>
-        <nav class="menu">
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a class="button-elenco" href="./elenco.html">Elenco</a></li>
-                <li><a href="#">Temporadas</a>
-                    <ul>
-                        <li><a href="./temporada1.html">Temporada 1</a></li>
-                        <li><a href="./temporada2.html">Temporada 2</a></li>
-                        <li><a href="./temporada3.html">Temporada 3</a></li>
-                        <li><a href="./temporada4.html">Temporada 4</a></li>
-                        <li><a href="./temporada5.html">Temporada 5</a></li>
-                        <li><a href="./temporada6.html">Temporada 6</a></li>
+        <nav>
+            <ul class="menu">
+                <li class="menu__item"><a href="./index.html">Home</a></li>
+                <li class="menu__item"><a class="button-elenco" href="./elenco.html">Elenco</a></li>
+                <li class="menu__item com-submenu"><a href="">Temporadas</a>
+                    <ul class="submenu">
+                        <li class="submenu__item"><a href="./temporada1.html">Temporada 1</a></li>
+                        <li class="submenu__item"><a href="./temporada2.html">Temporada 2</a></li>
+                        <li class="submenu__item"><a href="./temporada3.html">Temporada 3</a></li>
+                        <li class="submenu__item"><a href="./temporada4.html">Temporada 4</a></li>
+                        <li class="submenu__item"><a href="./temporada5.html">Temporada 5</a></li>
+                        <li class="submenu__item"><a href="./temporada6.html">Temporada 6</a></li>
 
                     </ul>
                     
@@ -57,6 +57,7 @@
             
             <br><br><br><br><br><br><br>
 
+            <img class="imagemJhon" src="./imagens/jhon.jpg" alt="imagem jhon">
             <h2>John Shelby (Joe Cole)</h2>
             <p>O terceiro irmão Shelby combina características de Thomas e de Arthur: John Shelby é estrategista o bastante para conseguir lidar com a administração da organização criminosa, mas também é violento e impulsivo para constantemente comprar brigas, especialmente com a polícia e outras gangues.
                 Ele é vivido pelo ator inglês Joe Cole, cuja carreira inclui breves participações em séries como Skins, The Thick of It e Black Mirror, além de papéis de destaque em filmes como Sala Verde (2015) e Prece ao Nascer do Dia (2017).</p>
