--- a/temporada2.html
+++ b/temporada2.html
@@ -14,18 +14,18 @@
 <body>
 
     <header>
-        <nav class="menu">
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a class="button-elenco" href="./elenco.html">Elenco</a></li>
-                <li><a href="#">Temporadas</a>
-                    <ul>
-                        <li><a href="./temporada1.html">Temporada 1</a></li>
-                        <li><a href="./temporada2.html">Temporada 2</a></li>
-                        <li><a href="./temporada3.html">Temporada 3</a></li>
-                        <li><a href="./temporada4.html">Temporada 4</a></li>
-                        <li><a href="./temporada5.html">Temporada 5</a></li>
-                        <li><a href="./temporada6.html">Temporada 6</a></li>
+        <nav>
+            <ul class="menu">
+                <li class="menu__item"><a href="./index.html">Home</a></li>
+                <li class="menu__item"><a class="button-elenco" href="./elenco.html">Elenco</a></li>
+                <li class="menu__item com-submenu"><a href="">Temporadas</a>
+                    <ul class="submenu">
+                        <li class="submenu__item"><a href="./temporada1.html">Temporada 1</a></li>
+                        <li class="submenu__item"><a href="./temporada2.html">Temporada 2</a></li>
+                        <li class="submenu__item"><a href="./temporada3.html">Temporada 3</a></li>
+                        <li class="submenu__item"><a href="./temporada4.html">Temporada 4</a></li>
+                        <li class="submenu__item"><a href="./temporada5.html">Temporada 5</a></li>
+                        <li class="submenu__item"><a href="./temporada6.html">Temporada 6</a></li>
 
                     </ul>
                 </li>
