Adicionando imagens nas temporadas

--- a/temporada2.html
+++ b/temporada2.html
@@ -29,7 +29,7 @@
 
                     </ul>
                 </li>
-                <                <a href="./index.html"><img class="logo" src="./imagens/peaky_Blinders_logo.jpg" alt="imagem logo"></a>
+             <a href="./index.html"><img class="logo" src="./imagens/peaky_Blinders_logo.jpg" alt="imagem logo"></a>
 
             </ul>
         </nav>
@@ -38,28 +38,35 @@
     <main class="main_tdois">
         <h1>Temporada 2</h1>
         <br><br>
+        <div class="linha-horizontal"></div>
 
         <div id="temporada_dois">
+            <img class="t2e1" src="./imagens/temporada2/t2e1.jpg" alt="imagem ep1">
             <h2>T2:E1 "Episódio 1"</h2>
             <p>O pub preferido de Tommy Shelby, chefe do crime de Birmingham, é destruído por uma explosão e ele é chantageado para assassinar um dissidente irlandês.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t2e2" src="./imagens/temporada2/t2e2.jpg" alt="imagem ep2">
             <h2>T2:E2 "Episódio 2"</h2>
             <p>Após assassinar um dissidente irlandês, Tommy fica sem saída e é obrigado a fazer parte do perigoso jogo político do Inspetor Campbell.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t2e3" src="./imagens/temporada2/t2e3.jpg" alt="imagem ep3">
             <h2>T2:E3 "Episódio 3"</h2>
             <p>Após se unir ao chefe do crime londrino Alfie Solomons em uma nova empreitada, Tommy teme que a volatilidade recém-revelada de Alfie cause algum problema.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t2e4" src="./imagens/temporada2/t2e4.jpg" alt="imagem ep4">
             <h2>T2:E4 "Episódio 4"</h2>
             <p>Os Peaky Blinders assumem o controle do Eden Club em Londres. Sabini convence seu velho inimigo Alfie Solomons a juntarem forças e acabar com a gangue.</p>
-            <br><br>
-
+            <br><br><br><br><br><br><br>
+            
+            <img class="t2e5" src="./imagens/temporada2/t2e5.jpg" alt="imagem ep5">
             <h2>T2:E5 "Episódio 5"</h2>
             <p>Os Peaky Blinders estão sendo atacados. A base de Tommy em Londres é destruída e Arthur e Michael são detidos e encarcerados.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t2e6" src="./imagens/temporada2/t2e6.jpg" alt="imagem ep6">
             <h2>T2:E6 "Episódio 6"</h2>
             <p>Tommy planeja executar a missão que recebeu de Campbell: assassinar um militar de alto escalão.</p>
             <br><br>
