--- a/temporada1.html
+++ b/temporada1.html
@@ -40,28 +40,35 @@
     <main class="main_tum">
         <h1>Temporada 1</h1>
         <br><br>
+        <div class="linha-horizontal"></div>
 
         <div id="temporada_um">
+            <img class="t1e1" src="./imagens/temporada1/t1e1.jpg" alt="imagem ep1">
             <h2>T1:E1 "Episódio 1"</h2>
             <p> O ambicioso gângster Thomas Shelby percebe que um carregamento de armas desaparecido pode ser sua grande chance de subir na vida. </p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t1e2" src="./imagens/temporada1/t1e2.jpg" alt="imagem ep2">
             <h2>T1:E2 "Episódio 2"</h2>
             <p>Thomas provoca um criminoso local ao trapacear em uma corrida de cavalos e entra em pé de guerra com uma família de ciganos. Campbell organiza um ataque surpresa.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t1e3" src="./imagens/temporada1/t1e3.jpg" alt="imagem ep3">
             <h2>T1:E3 "Episódio 3"</h2>
             <p>Thomas pretende se aproximar de Billy Kimber nas corridas de Cheltenham e considera uma oferta de simpatizantes do IRA para comprar suas armas.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t1e4" src="./imagens/temporada1/t1e4.jpg" alt="imagem ep4">
             <h2>T1:E4 "Episódio 4"</h2>
             <p>Thomas está cada vez mais desconfiado da noiva de seu irmão, e Campbell pressiona a gangue a entregar as armas.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t1e5" src="./imagens/temporada1/t1e5.jpg" alt="imagem ep5">
             <h2>T1:E5 "Episódio 5"</h2>
             <p>Thomas lida com um líder do IRA querendo se vingar da morte de seu primo, e Grace precisa decidir se é leal a Campbell ou Thomas.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t1e6" src="./imagens/temporada1/t1e6.jpg" alt="imagem ep6">
             <h2>T1:E6 "Episódio 6"</h2>
             <p>Thomas se prepara para tirar Billy Kimber do poder, mas segredos de família e a obsessão de Campbell podem atrapalhar seus planos.</p>
             <br><br>
