Adicionando imagens as temporadas

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 
     <footer>© 2024. Desenvolvido por
         <br>
-        <a href="https://www.linkedin.com/in/jo%C3%A3o-paulo-77b9271ba/" target="_blank"><img src="./imagens/icone-linkedin2.png" alt="linkedin"></a> 
-        <a href="https://www.instagram.com/peakyblindersofficial/" target="_blank"><img src="./imagens/icone-instagram2.png" alt="instagram"></a>
-        <a href="https://twitter.com/ThePeakyBlinder" target="_blank"><img src="./imagens/icone-x.png" alt="x"></a>
+        <a href="https://www.linkedin.com/in/jo%C3%A3o-paulo-77b9271ba/" target="_blank"><img src="./imagens/icones/icone-linkedin2.png" alt="linkedin"></a> 
+        <a href="https://www.instagram.com/peakyblindersofficial/" target="_blank"><img src="./imagens/icones/icone-instagram2.png" alt="instagram"></a>
+        <a href="https://twitter.com/ThePeakyBlinder" target="_blank"><img src="./imagens/icones/icone-x.png" alt="x"></a>
     </footer>
 </body>
 </html>
