--- a/temporada3.html
+++ b/temporada3.html
@@ -38,29 +38,38 @@
    
     <main class="main_ttres">
         <h1>Temporada 3</h1>
+        <div class="linha-horizontal"></div>
         <br><br>
 
         <div id="temporada_tres">
-            <h2>T3:E1 "Episódio 1"</h2>
-            <p>No dia do casamento de Tommy, um novo parceiro de negócios combina uma transação secreta. Arthur encontra uma mulher religiosa e Polly conhece um homem atraente.</p>
-            <br><br>
 
+            <img class="t3e1" src="./imagens/temporada3/t3e1.jpg" alt="imagem ep1">
+            <h2>T3:E1 "Episódio 1"</h2>
+            <p>No dia do casamento de Tommy, um novo parceiro de negócios combina uma transação secreta. Arthur encontra uma mulher religiosa
+                 e Polly conhece um homem atraente.</p>
+            <br><br><br><br><br><br><br>
+
+            <img class="t3e2" src="./imagens/temporada3/t3e2.jpg" alt="imagem ep2">
             <h2>T3:E2 "Episódio 2"</h2>
             <p>Uma ameaça impensada é o estopim de uma guerra. Tommy recebe um pagamento incomum, mas os chefões fazem o que for preciso para mantê-lo na linha. Polly encomenda um retrato.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t3e3" src="./imagens/temporada3/t3e3.jpg" alt="imagem ep3">
             <h2>T3:E3 "Episódio 3"</h2>
             <p>Tommy viaja até o País de Gales em busca de absolvição e descobre um traidor na Liga Econômica. Michael começa a tomar gosto por armas. Arthur recebe boas notícias.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t3e4" src="./imagens/temporada3/t3e4.jpg" alt="imagem ep4">
             <h2>T3:E4 "Episódio 4"</h2>
             <p>Polly vai se confessar, dando início a uma série de eventos que revelam um plano para que os Shelby caiam em uma armadilha. Tommy planeja sair dos negócios sujos.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t3e5" src="./imagens/temporada3/t3e5.jpg" alt="imagem ep5">
             <h2>T3:E5 "Episódio 5"</h2>
             <p>Ao perceber que os russos foram mais astutos do que ele, Tommy procura a ajuda de um antigo parceiro de negócios. A nova amizade de Polly se transforma em algo a mais.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t3e6" src="./imagens/temporada3/t3e6.jpg" alt="imagem ep6">
             <h2>T3:E6 "Episódio 6"</h2>
             <p>Enquanto Tommy se prepara para cometer o crime mais audacioso de sua carreira, um golpe inesperado o força a enfrentar seus maiores medos em uma corrida contra o tempo.</p>
             <br><br>
