--- a/temporada4.html
+++ b/temporada4.html
@@ -41,28 +41,35 @@
 
         <div id="temporada_quatro">
             <h1>Temporada 4</h1>
+            <div class="linha-horizontal"></div>
             <br><br>
 
+            <img class="t4e1" src="./imagens/temporada4/t4e1.jpg" alt="imagem ep1">
             <h2>T4:E1 "A forca"</h2>
             <p>No Natal de 1925, os integrantes da família Shelby descobrem que a máfia de Nova York está a caminho para vingar os assassinatos que eles cometeram no passado.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t4e2" src="./imagens/temporada4/t4e2.jpg" alt="imagem ep2">
             <h2>T4:E2 "Bárbaros"</h2>
             <p>Tentando se recuperar das perdas, os Shelby se reúnem em Small Heath, onde Tommy propõe uma trégua para organizar a ofensiva contra a máfia.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t4e3" src="./imagens/temporada4/t4e3.jpg" alt="imagem ep3">
             <h2>T4:E3 "Questão de segurança nacional"</h2>
             <p>Linda tenta distrair Arthur. Mais tarde, ele acaba caindo em uma emboscada. Tommy se lembra de quem era antes da guerra. Polly encontra um homem de seu passado.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t4e4" src="./imagens/temporada4/t4e4.jpg" alt="imagem ep4">
             <h2>T4:E4 "Perigo à vista"</h2>
             <p>A máfia tenta atrair um dos Shelby para uma armadilha. Tommy recebe a visita de uma antiga paixão. Lizzie recebe notícias inesperadas.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t4e1" src="./imagens/temporada4/t4e1.jpg" alt="imagem ep1">
             <h2>T4:E5 "À revolução!"</h2>
             <p>Mesmo em menor número, Tommy inicia um tiroteio com a máfia. Luca Changretta aborda Alfie Solomons. Militares britânicos procuram por Ada.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t4e5" src="./imagens/temporada4/t4e5.jpg" alt="imagem ep5">
             <h2>T4:E6 "À paz!"</h2>
             <p>Arthur segue seu instinto durante a luta de boxe. Tommy é inspirado pelas sábias palavras de Alfie Solomons e recebe informações importantes de Jessie.</p>
             <br><br>
