--- a/temporada5.html
+++ b/temporada5.html
@@ -41,28 +41,35 @@
 
         <div id="temporada_cinco">
             <h1>Temporada 5</h1>
-            <br><br>
+            <div class="linha-horizontal"></div>
+            <br><br><br><br><br><br><br>
 
+            <img class="t5e1" src="./imagens/temporada5/t5e1.jpg" alt="imagem ep1">
             <h2>T5:E1 "Catástrofe na terça-feira"</h2>
             <p>A família Shelby se reúne às pressas para tratar de notícias graves. Ada esconde um segredo. Tommy é visitado por um jornalista que conhece o seu passado.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t5e2" src="./imagens/temporada5/t5e2.jpg" alt="imagem ep2">
             <h2>T5:E2 "Gatos pretos"</h2>
             <p>As mensagens anônimas tomam um rumo alarmante. A lealdade de Michael é questionada. Oswald Mosley faz um convite a Tommy.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t5e3" src="./imagens/temporada5/t5e3.jpg" alt="imagem ep3">
             <h2>T5:E3 "Estratégia"</h2>
             <p>Aberama vai a Glasgow atrás de vingança. Mosley chantageia Tommy, que decide dar o troco. Desesperado para achar Linda, Arthur perde o controle.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t5e4" src="./imagens/temporada5/t5e4.jpg" alt="imagem ep4">
             <h2>T5:E4 "O ciclo"</h2>
             <p>Tommy e Jimmy McCavern acertam uma trégua. Surge uma oportunidade de negócios lucrativa. Em nome do amor, Aberama pode adiar sua vingança.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t5e5" src="./imagens/temporada5/t5e5.jpg" alt="imagem ep5">
             <h2>T5:E5 "A surpresa"</h2>
             <p>Mosley discursa na festa. Ben Younger sofre consequências inesperadas por contar o que Tommy descobriu sobre os fascistas. Tommy visita um ex-companheiro de guerra.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t5e6" src="./imagens/temporada5/t5e6.jpg" alt="imagem ep6">
             <h2>T5:E6 "Sr. Jones"</h2>
             <p>Numa reunião de família, Michael faz uma proposta ousada. O espião é identificado. Tommy pede para um antigo rival ajudá-lo a derrubar Mosley.</p>
             <br><br>
