--- a/temporada6.html
+++ b/temporada6.html
@@ -41,28 +41,35 @@
 
         <div id="temporada_seis">
             <h1>Temporada 6</h1>
+            <div class="linha-horizontal"></div>
             <br><br>
 
+            <img class="t6e1" src="./imagens/temporada6/t6e1.jpg" alt="imagem ep1">
             <h2>T6:E1 "Dia sombrio"</h2>
             <p>A tentativa de assassinato de Mosley acaba em tragédia para a família Shelby. Quatro anos depois, o iminente fim da Lei Seca leva Tommy à América do Norte.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t6e2" src="./imagens/temporada6/t6e2.jpg" alt="imagem ep2">
             <h2>T6:E2 "Camisa preta"</h2>
             <p>Tommy faz uma aliança inesperada para facilitar sua proposta a Jack Nelson. Ruby, sua filha, faz uma revelação preocupante.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t6e3" src="./imagens/temporada6/t6e3.jpg" alt="imagem ep3">
             <h2>T6:E3 "Ouro"</h2>
             <p>Tommy vai ao encontro de Esme. No lugar dele, Ada apresenta Jack Nelson a Mosley e Diana. Arthur conhece um ex-dependente químico que entende sua dificuldade.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t6e4" src="./imagens/temporada6/t6e4.jpg" alt="imagem ep4">
             <h2>T6:E4 "Safira"</h2>
             <p>Arrasado por outra perda, Tommy busca vingança. Ada sofre com o fascismo. O sanatório envia uma mensagem urgente.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t6e5" src="./imagens/temporada6/t6e5.jpg" alt="imagem ep5">
             <h2>T6:E5 "Caminho para o inferno"</h2>
             <p>Tommy faz um acordo com Linda. O informante infiltrado na família Shelby tem uma nova missão. Diana concorda em fazer um favor a Tommy, mas sob uma condição.</p>
-            <br><br>
+            <br><br><br><br><br><br><br>
 
+            <img class="t6e6" src="./imagens/temporada6/t6e6.jpg" alt="imagem ep6">
             <h2>T6:E6 "Trancado à chave"</h2>
             <p>O informante sabe quando e onde Arthur estará sozinho. Michael, que acaba de sair da cadeia, encara sua missão. A lealdade de Finn à família é testada.</p>
             <br><br>
