Adicionando imagem polly elenco

--- a/elenco.html
+++ b/elenco.html
@@ -62,8 +62,9 @@
             <p>O terceiro irmão Shelby combina características de Thomas e de Arthur: John Shelby é estrategista o bastante para conseguir lidar com a administração da organização criminosa, mas também é violento e impulsivo para constantemente comprar brigas, especialmente com a polícia e outras gangues.
                 Ele é vivido pelo ator inglês Joe Cole, cuja carreira inclui breves participações em séries como Skins, The Thick of It e Black Mirror, além de papéis de destaque em filmes como Sala Verde (2015) e Prece ao Nascer do Dia (2017).</p>
 
-            <br><br><br><br><br><br><br>
+            <br><br><br><br><br><br><br><br><br>
 
+            <img class="imagemPolly" src="./imagens/polly.jpg" alt="imagem polly">
             <h2>Polly Gray (Helen McCrory)</h2>
             <p>
                 Após os irmãos Shelby terem sido abandonados pelo pai (em razão da morte da mãe), foi a tia Polly Gray quem assumiu a tarefa de criar os meninos. Assim, ela se tornou a principal figura materna de Thomas, Arthur, Finn, John e Ada Shelby. Não só ela é a matriarca da família, como também cuida de toda a parte administrativa da organização criminosa, além de frequentemente servir como conselheira para as decisões de Thomas Shelby.
