--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header>
         <nav>
             <ul class="menu">
-                <li class="menu__item"><a href="#">Home</a></li>
-                <li class="menu__item"><a class="button-elenco" href="./elenco.html">Elenco</a></li>
-                <li class="menu__item com-submenu"><a href="">Temporadas</a>
+                <li class="menu__item home"><a href="#">Home</a></li>
+                <li class="menu__item elenco"><a class="button-elenco" href="./elenco.html">Elenco</a></li>
+                <li class="menu__item com-submenu temporada"><a href="">Temporadas</a>
                     <ul class="submenu">
                         <li class="submenu__item"><a href="./temporada1.html">Temporada 1</a></li>
                         <li class="submenu__item"><a href="./temporada2.html">Temporada 2</a></li>
