--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="./index.html"><img class="logo" src="./imagens/peaky_Blinders_logo.jpg" alt="imagem logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,8 +58,8 @@
                 </ul>
               </div>
             </div>
-          </nav>
-        <!-- <nav>
+          </nav> -->
+        <nav>
             <ul class="menu">
                 <li class="menu__item home"><a href="#">Home</a></li>
                 <li class="menu__item elenco"><a class="button-elenco" href="./elenco.html">Elenco</a></li>
@@ -73,8 +73,8 @@
                         <li class="submenu__item"><a href="./temporada6.html">Temporada 6</a></li>
 
                     </ul>
-                </li> -->
-                <!-- <a href="./index.html"><img class="logo" src="./imagens/peaky_Blinders_logo.jpg" alt="imagem logo"></a> -->
+                </li> 
+                <a href="./index.html"><img class="logo" src="./imagens/peaky_Blinders_logo.jpg" alt="imagem logo"></a>
             </ul>
 
             
