--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                         <li class="submenu__item"><a href="./temporada6.html">Temporada 6</a></li>
 
                     </ul>
+                  <li class="menu__item novidades"><a class="button-novidade" href="./main.html">Novidades</a></li>
                 </li> 
                 <a href="./index.html"><img class="logo" src="./imagens/peaky_Blinders_logo.jpg" alt="imagem logo"></a>
             </ul>
